--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -657,3 +657,10 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_NTFS_FS=y
