--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -667,3 +667,4 @@ CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=y
 CONFIG_POWERSUSPEND=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_THUNDERCHARGE_CONTROL=y
