Update tomato defconfig

--- a/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
+++ b/arch/arm64/configs/cyanogenmod_tomato-64_defconfig
@@ -670,3 +670,6 @@ CONFIG_POWERSUSPEND=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_THUNDERCHARGE_CONTROL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
